# golem-hackathon-31.01.25

./: .envrc  .gitignore  README.md  notes.txt
components-rust/golem-example-billing/: Cargo.toml  golem.yaml
components-rust/golem-example-billing-service/: Cargo.toml  golem.yaml
components-rust/golem-example-billing-service/src/: lib.rs
components-rust/golem-example-billing-service/wit/: golem-example-billing-service.wit
components-rust/golem-example-billing/src/: lib.rs
components-rust/golem-example-billing/wit/: golem-example-billing.wit
components-rust/golem-example-order/: Cargo.toml  golem.yaml
components-rust/golem-example-order-service/: Cargo.toml  golem.yaml
components-rust/golem-example-order-service/src/: lib.rs
components-rust/golem-example-order-service/wit/: golem-example-order-service.wit
components-rust/golem-example-order/src/: lib.rs
components-rust/golem-example-order/wit/: golem-example-order.wit
components-rust/golem-example-orders/: Cargo.toml  golem.yaml
components-rust/golem-example-orders/src/: lib.rs
components-rust/golem-example-orders/wit/: golem-example-orders.wit
components-rust/golem-example-reference-id-manager/: Cargo.toml  golem.yaml
components-rust/golem-example-reference-id-manager/src/: lib.rs
components-rust/golem-example-shipment/: Cargo.toml  golem.yaml
components-rust/golem-example-shipment-service/: Cargo.toml  golem.yaml
components-rust/golem-example-shipping/: Cargo.toml  golem.yaml
components-rust/golem-example-warehouse/: Cargo.toml  golem.yaml
(+9 files in other folders)
